# CM12005-Coursework

./: .gitignore  README.md  auth.py  extract.py  identifier.sqlite  index.html  main.py  pyproject.toml  schema.sql
backend/: README.md  auth.py  db.py  extract.py  index.html  main.py  pyproject.toml  test.db
backend/api/: __init__.py  auth.py  logs.py  notes.py  plants.py  sensors.py
backend/api/sensors/: __init__.py  routes.py  sensor.py
backend/logs/: routes.py
backend/models/: models.py
backend/physical/: testsensor.py
backend/plants/: __init__.py  routes.py
backend/sensor/: __init__.py  sensor.py  testsensor.py
backend/sensors/: __init__.py  routes.py  sensor.py  testsensor.py
backend/sql/: drop.sql  schema.sql
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  index.css  main.tsx
frontend/src/Pages/Dev/: DevPage.tsx  DevPlants.tsx  LogFieldSelectBox.tsx  LogPage.tsx  PlantPage.tsx  SensorPage.tsx
frontend/src/Pages/GoalPage/: GoalPage.tsx
frontend/src/Pages/GoalPage/Styling/: GoalPage.css
frontend/src/Pages/Home/: AchievementBar.tsx  Home.css  Home.tsx  PlantBar.css  PlantBar.tsx  PlantPanel.tsx  PlantPicture.css  PlantPicture.tsx
frontend/src/Pages/PlantPage/: Graph.tsx  Notes.tsx  PlantGuide.tsx  PlantInput.css  PlantInput.tsx  PlantPage.css  PlantPage.tsx  PlantPicture.tsx
frontend/src/Pages/PlantPage/Components/: Graph.tsx  Notes.tsx  PlantGuide.tsx  PlantInput.tsx  PlantPicture.tsx
frontend/src/Pages/PlantPage/Styling/: Graph.css  Notes.css  PlantGuide.css  PlantInput.css  PlantPage.css  PlantPicture.css
frontend/src/Pages/UserDetails/: UserDetails.tsx
frontend/src/Pages/UserPage/: UserPage.css  UserPage.tsx
frontend/src/PlantPage/: Notes.tsx  PlantPage.css  PlantPicture.tsx  box.css
frontend/src/api/: api.ts  types.ts
sql/: schema.sql
