[project]
name = "cm12005"
version = "0.1.0"
description = ""
authors = [
    {name = "maurice-borys",email = "brillbusmorriss@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
# Stops dir having to match project name
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"