[project]
name = "groupcoursework"
version = "0.1.0"
description = ""
authors = [
    {name = "maurice-borys",email = "brillbusmorriss@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
