[project]
name = "cm12005"
version = "0.1.0"
description = ""
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]


[tool.poetry]
# Stops dir having to match project name
package-mode = false

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pyright (>=1.1.408,<2.0.0)"
]